--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A layout example that shows off a responsive pricing table.">
-    <title>Pricing Table &ndash; Layout Examples &ndash; Pure</title>
+    <meta name="description" content="Personal website">
+    <title>Gaurav Kumar Verma</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
 
