--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $(function(){
           <div class="l-box">
               <h3 class="information-head"><b><i>About Me</i></b></h3>
               <p class="info">
-              <font size="4px">  I'm motivated by the belief that data can be used to make better decisions. I wants to be able to make it easier for people to understand code and use data efficiently. I believes in open data and open source software. I primarily uses Python, but also has experience with C, Javascript, HTML, CSS and Php.</p>
+              <font size="4px">  I'm motivated by the belief that data can be used to make better decisions. I want to be able to make it easier for people to understand code and use data efficiently. I believes in open data and open source software. I primarily uses Python, but also has experience with C, Javascript, HTML, CSS and Php.</p>
               </font>  </p>
           </div>
       </div>
