--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li class="pure-menu-item pure-menu-selected"><a href="index.html" class="pure-menu-link">Home</a></li>
         <li class="pure-menu-item "><a href="projects.html" class="pure-menu-link">Projects</a></li>
         <li class="pure-menu-item"><a href="resume/resume.pdf" class="pure-menu-link">Resume</a></li>
+        <li class="pure-menu-item"><a href="game.html" class="pure-menu-link">Games</a></li>
     </ul>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
