--- a/game.html
+++ b/game.html
@@ -10,5 +10,6 @@
     <script src="snake.js" type="text/javascript"></script>
   </head>
   <body>
+    <p>A Snake game made in javascript</p>
   </body>
 </html>
