--- a/index.html
+++ b/index.html
@@ -35,21 +35,44 @@
 </head>
 <body>
 
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Gaurav Kumar Verma</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="resume/resume.pdf">Resume</a></li>
+          </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goodies <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="game.html">Snake Game</a></li>
+              <li><a href="boot.html">Tree</a></li>
+
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 
 
 
 
 
-
-<div class="pure-menu pure-menu-horizontal">
-    <a href="index.html" class="pure-menu-heading">Gaurav Kumar Verma</a>
-    <ul class="pure-menu-list">
-        <li class="pure-menu-item pure-menu-selected"><a href="index.html" class="pure-menu-link">Home</a></li>
-        <li class="pure-menu-item "><a href="projects.html" class="pure-menu-link">Projects</a></li>
-        <li class="pure-menu-item"><a href="resume/resume.pdf" class="pure-menu-link">Resume</a></li>
-        <li class="pure-menu-item"><a href="game.html" class="pure-menu-link">Games</a></li>
-    </ul>
-</div>
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script type="text/javascript">
 $(function(){
