--- a/boot.html
+++ b/boot.html
@@ -13,5 +13,7 @@
   <h1>Click Me to see Blossom Tree</h1>
 
   <p>I want to see blossom ..... So I created it ...😜😜😝😝</p>
+  <p>This is also a test for your device</p>
+  <p>Click it for 9 time and check out your device processor speed in cooler way</p>
   </body>
 </html>
