--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <ul class="dropdown-menu">
               <li><a href="game.html">Snake Game</a></li>
               <li><a href="boot.html">Tree</a></li>
+              <li><a href="electro.html">Moving Electron</a></li>
 
             </ul>
           </li>
