--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Goodies <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="game.html">Snake Game</a></li>
-              <li><a href="boot.html">Tree</a></li>
+              <li><a href="boot.html">Blossom Tree</a></li>
               <li><a href="electro.html">Moving Electron</a></li>
 
             </ul>
